--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Nuestro sitio ofrece la venta y distribucion de una seleccion de whiskies en un rango de precio entre diez mil y cien mil. La distribución se extiende por toda la Argentina unicamente. A su vez, cada producto viene acompañado de información pertinenete para facilitar la elección del cliente.",
   "main": "src/public/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "test": "nodemon src/app.js -e js,mjs,json,ejs,css",
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +18,7 @@
   },
   "homepage": "https://github.com/FrancoSantaCruz/grupo_1_eCommers#readme",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.2"
   },
   "devDependencies": {
